syntax = "proto3";


package test.message;

option java_package = "io.edap.protobuf.test.message.v3";
//option java_outer_classname = "MessageOuter";

message OneMessage {
    Proj value = 1;
}

message Proj {
    int64 id = 1;
    string name = 2;
    string repoPath = 3;
}